# testing_ollama_embeddings

./: LICENSE  README.md  embed_text.py  pyproject.toml  setup_vast_gpu.sh
